<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/report_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second_pic"
    android:orientation="vertical"
    android:paddingTop="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/report"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/brown"
        android:padding="10dp"
        android:text="@string/report_headline"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_address_id"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:hint="@string/email_address"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/pic_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/camera" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="60dp"
            android:layout_height="90dp"
            android:layout_margin="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/video_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/video" />

        <VideoView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:layout_margin="15dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/ic_play_circle_outline_black_24dp" />

    <Button
        android:id="@+id/done_report_btn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/gold_btn"
        android:text="@string/done_btn"
        android:textStyle="bold" />

</LinearLayout>