<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    android:orientation="vertical">

    <ImageView
        android:layout_width="256dp"
        android:layout_height="205dp"
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/main_btns_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/booking_id"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:background="@drawable/gold_btn"
            android:text="@string/Booking"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/report_id"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gold_btn"
            android:text="@string/report"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/busy_id"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gold_btn"
            android:text="@string/busy_str"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="80dp">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/add_contact"
            android:id="@+id/add_id"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/call"
            android:id="@+id/call_id"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/email"
            android:id="@+id/email_id"/>

    </LinearLayout>

</LinearLayout>